player -> offlinePlayer / User Move home messages, add handling for few cases and new messages for some more